clinic/bridge/base/clinic-app-deployment.yaml
#! clinic-app-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clinic-app
  namespace: clinic
  labels:
    com.docker.compose.project: clinic
    com.docker.compose.service: clinic-app
spec:
  replicas: 1
  selector:
    matchLabels:
      com.docker.compose.project: clinic
      com.docker.compose.service: clinic-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        com.docker.compose.project: clinic
        com.docker.compose.service: clinic-app
        com.docker.compose.network.default: "true"
    spec:
      restartPolicy: unless-stopped
      containers:
        - name: clinic-app
          image: clinic-clinic-app
          imagePullPolicy: IfNotPresent
          ports:
            - name: clinic-app-8080
              containerPort: 8080
