clinic/bridge/base/clinic-redis-deployment.yaml
#! clinic-redis-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: clinic-redis
    namespace: clinic
    labels:
        com.docker.compose.project: clinic
        com.docker.compose.service: clinic-redis
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: clinic
            com.docker.compose.service: clinic-redis
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: clinic
                com.docker.compose.service: clinic-redis
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: Always
            containers:
                - name: clinic-redis
                  image: redis:7-alpine
                  imagePullPolicy: IfNotPresent
                  resources:
                    requests:
                      cpu: 50m
                      memory: 64Mi
                    limits:
                      cpu: 250m
                      memory: 256Mi
                  args:
                    - redis-server
                    - --appendonly
                    - yes
                  livenessProbe:
                    exec:
                        command: [redis-cli ping]
                    periodSeconds: 10
                    timeoutSeconds: 5
                    failureThreshold: 5
                  ports:
                    - name: clinic-red-6379
                      containerPort: 6379
                  volumeMounts:
                    - name: data
                      mountPath: /data
            volumes:
                - name: data
                  persistentVolumeClaim:
                    claimName: clinic-redis-redis-data
