clinic/bridge/base/clinic-app-expose.yaml
#! clinic-app-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: clinic-app
    namespace: clinic
    labels:
        com.docker.compose.project: clinic
        com.docker.compose.service: clinic-app
spec:
    selector:
        com.docker.compose.project: clinic
        com.docker.compose.service: clinic-app
    ports:
        - name: clinic-app-8080
          port: 8080
          targetPort: clinic-app-8080
