clinic/bridge/base/clinic-postgres-expose.yaml
#! clinic-postgres-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: clinic-postgres
    namespace: clinic
    labels:
        com.docker.compose.project: clinic
        com.docker.compose.service: clinic-postgres
spec:
    selector:
        com.docker.compose.project: clinic
        com.docker.compose.service: clinic-postgres
    ports:
        - name: clinic-pos-5432
          port: 5432
          targetPort: clinic-pos-5432
