clinic/bridge/base/clinic-redis-service.yaml
#! clinic-redis-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: clinic-redis-published
    namespace: clinic
    labels:
        com.docker.compose.project: clinic
        com.docker.compose.service: clinic-redis
spec:
    selector:
        com.docker.compose.project: clinic
        com.docker.compose.service: clinic-redis
    ports:
        - name: clinic-red-6379
          port: 6379
          protocol: TCP
          targetPort: clinic-red-6379
